--- a/src/app/landing/hero-section/hero-section.component.html
+++ b/src/app/landing/hero-section/hero-section.component.html
@@ -61,8 +61,16 @@
         <!-- Right Image -->
         <div class="relative flex justify-center">
             <figure class="group mt-12">
-                <img [src]="h.image" alt="Berliz training image" class="w-full object-cover rounded-md shadow-md
-                    group-hover:shadow-2xl transform transition-all duration-300 group-hover:scale-105" />
+             <div class="w-full aspect-[3/2] overflow-hidden rounded-md shadow-md
+            group-hover:shadow-2xl transition-all duration-300">
+  <img
+    [src]="h.image"
+    alt="Berliz training image"
+    class="w-full h-full object-cover
+           transform transition-transform duration-300 group-hover:scale-105"
+  />
+</div>
+
                 <figcaption class="flex md:hidden justify-between mt-4 text-white">
                     <button (click)="changeHero(-1)" class="text-2xl text-gray-300 hover:text-red-600">&#9668;</button>
                     <button (click)="changeHero(+1)" class="text-2xl text-gray-300 hover:text-red-600">&#9658;</button>
