--- a/src/app/shared/location-form/location-form.component.scss
+++ b/src/app/shared/location-form/location-form.component.scss
@@ -3,24 +3,29 @@
 ::ng-deep .ng-select {
     font-size: 1rem;
     background-color: white;
-    border: 1px solid #d1d5db; // gray-300
-    border-radius: 0.25rem;
-    padding: 0.75rem 0.75rem;
+    border: 1px solid #e5e7eb; // gray-200
+    border-radius: 0.375rem;
+    border-width: 1px;
+    height: 42px;
     color: #111827; // gray-900
 }
 
+.ng-select.ng-select-single .ng-select-container {
+    height: 42px;
+}
 
 ::ng-deep .ng-select .ng-select-container {
     border: none;
     background-color: transparent;
     box-shadow: none;
+    min-height: 42px;
 }
 
 ::ng-deep .ng-dropdown-panel {
     background-color: white;
     z-index: 1050;
-    border: 1px solid #d1d5db; // gray-300
-    border-radius: 0.25rem;
+    border: 1px solid #e5e7eb; // gray-200
+    border-radius: 0.375rem;
     overflow: hidden;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
 }
@@ -34,14 +39,14 @@
 
 ::ng-deep .ng-option:hover {
     background-color: #fee2e2; // red-100
-    border-radius: 0.25rem;
+    border-radius: 0.375rem;
     color: #000;
 }
 
 ::ng-deep .ng-option-selected {
     background-color: #dc2626; // red-600
     color: white;
-    border-radius: 0.25rem;
+    border-radius: 0.375rem;
 }
 
 ::ng-deep .ng-select .ng-arrow-wrapper {
