--- a/src/app/shared/location-form/location-form.component.html
+++ b/src/app/shared/location-form/location-form.component.html
@@ -1,43 +1,50 @@
 <form [formGroup]="form" class="space-y-4 text-black">
 
   <!-- Country -->
-  <ng-select formControlName="country" [items]="countries" bindLabel="name" bindValue="code" [clearable]="false"
-    [searchFn]="searchCountryByName" placeholder="Select Country" class="w-full rounded-md border focus:outline-none">
+  <ng-select formControlName="country" [items]="countries" bindLabel="name" bindValue="code"
+             placeholder="Select Country" [clearable]="false" class="w-full rounded-md border focus:outline-none">
     <ng-template ng-option-tmp let-item="item">
-      <img [src]="item.flag" class="inline w-5 h-3 mr-2 rounded-sm" />
-      {{ item.name }} ({{ item.dialCode }})
+      <img [src]="item.flag" class="inline w-6 h-4 mr-2 rounded-sm" /> {{ item.name }}
+    </ng-template>
+    <ng-template ng-label-tmp let-item="item">
+      <img [src]="item.flag" class="inline w-6 h-4 mr-2 rounded-sm" /> {{ item.name }}
     </ng-template>
   </ng-select>
 
   <!-- State -->
-  <ng-select formControlName="state" [items]="states" placeholder="Select State / Province" [disabled]="!states.length"
-    class="w-full rounded-md border focus:outline-none" [clearable]="false"></ng-select>
+  <ng-select formControlName="state" [items]="states" placeholder="Select State / Province"
+             [clearable]="false" [addTag]="addState" (click)="onStateClick()"
+             class="w-full rounded-md border focus:outline-none"></ng-select>
 
   <!-- City -->
-  <ng-select formControlName="city" [items]="cities" placeholder="Select City" [disabled]="!cities.length"
-    class="w-full rounded-md border focus:outline-none" [clearable]="false"></ng-select>
+  <ng-select formControlName="city" [items]="cities" placeholder="Select City"
+             [clearable]="false" [addTag]="addCity" (click)="onCityClick()"
+             class="w-full rounded-md border focus:outline-none"></ng-select>
 
   <!-- Address -->
-  <input formControlName="address" type="text" placeholder="Street Address"
-    class="w-full px-4 h-[42px] rounded-md border focus:outline-none" />
+  <input formControlName="address" type="text" placeholder="123 Main St, Suite 400"
+         class="w-full px-4 h-[42px] rounded-md border focus:outline-none"
+         [ngClass]="{'border-red-500': !isAddressValid() && form.get('address')?.value}" />
 
   <!-- Postal Code -->
-  <input formControlName="postalCode" type="text" placeholder="Postal Code"
-    class="w-full px-4 h-[42px] rounded-md border focus:outline-none" />
+  <input formControlName="postalCode" type="text" placeholder="90210 / K1A 0B1"
+         class="w-full px-4 h-[42px] rounded-md border focus:outline-none"
+         [ngClass]="{'border-red-500': !isPostalCodeValid() && form.get('postalCode')?.value}" />
 
   <!-- Country Code -->
-  <ng-select [items]="countries" bindValue="dialCode" bindLabel="dialCode" [(ngModel)]="selectedDialCode"
-    [clearable]="false" [searchFn]="searchDialCodeOnly" placeholder="Country Code"
-    class="w-full rounded-md border focus:outline-none">
+  <ng-select formControlName="countryCode" [items]="countries" bindValue="dialCode"
+             placeholder="Country Code" [clearable]="false" class="w-full rounded-md border focus:outline-none">
     <ng-template ng-option-tmp let-item="item">
-      <img [src]="item.flag" class="inline w-5 h-3 mr-2 rounded-sm" />
-      {{ item.name }} ({{ item.dialCode }})
+      <img [src]="item.flag" class="inline w-6 h-4 mr-2 rounded-sm" /> ({{item.name}}) {{item.dialCode}}
+    </ng-template>
+    <ng-template ng-label-tmp let-item="item">
+      <img [src]="item.flag" class="inline w-6 h-4 mr-2 rounded-sm" /> ({{item.name}}) {{item.dialCode}}
     </ng-template>
   </ng-select>
 
   <!-- Phone -->
-  <input formControlName="phone" type="text" placeholder="Phone Number"
-    class="w-full px-4 h-[42px] rounded-md border focus:outline-none" inputmode="numeric"
-    (input)="onPhoneInput($event)" />
+  <input formControlName="phone" type="text" placeholder="{{examplePhone}}"
+         class="w-full px-4 h-[42px] rounded-md border focus:outline-none"
+         [ngClass]="{'border-red-500': !isPhoneValid() && form.get('phone')?.value}" />
 
 </form>
